# kraken-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  kraken.dmp  names.dmp  nodes.dmp  output.dmp  test_accmap.txt  test_lookup.txt  test_taxonomy.k2d
.plandex/: project.json
blah/: Cargo.toml
blah/src/: main.rs
src/: aa_translate.rs  blah.ipynb  blah.py  build_db.rs  classify.rs  classify2.rs  classify3.rs  compact_hash.rs  dump_table.rs  errors.rs  estimate_capacity.rs  gz_stream.rs  hyperloglogplus.rs  k2mask.rs  kraken-rs.code-workspace  kraken2_data.rs  kraken2_headers.rs  kseq.rs  kv_store.rs  lib.rs  lookup_accession_numbers.rs  main.rs  mladen.rs  mmap_file.rs  mmap_file_old.rs  mmscanner.rs  mmscanner2.rs  ncbi_taxonomy.rs  omp_hack.rs  readcounts.rs  readcounts_old.rs  reports.rs  seqreader.rs  taxonomy.rs  threadpool.rs  utilities.rs
tests/: integration_tests.rs  taxonomy_tests.rs
