workspace = { members = ["blah"] }
[package]
name = "kraken-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
nix = { version = "0.29.0", features = ["fs"] }
rayon = "1.5.3"
num_cpus = "1.16.0"
atty = "0.2.14"
getopts = "0.2.21"
memmap = "0.7.0"
byteorder = "1.5.0"
anyhow = "1.0.88"
libc = "0.2.153"
memmap2 = "0.9.5"
threadpool = "1.8.1"
flate2 = "1.0.33"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.128"
rand = "0.8.5"
regex = "1.10.6"

[features]
linear_probing = []
