[package]
name = "kraken-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
nix = { version = "0.29.0", features = ["fs"] }
rayon = "1.10.0"
num_cpus = "1.16.0"
atty = "0.2.14"
getopts = "0.2.21"
memmap = "0.7.0"
byteorder = "1.5.0"
anyhow = "1.0.97"
libc = "0.2.170"
memmap2 = "0.9.5"
threadpool = "1.8.1"
flate2 = "1.1.0"
serde = { version = "1.0.218", features = ["derive"] }
bincode = "2.0.0"
serde_json = "1.0.140"
rand = "0.9.0"
regex = "1.11.1"
mmap = "0.1.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
lazy_static = "1.5.0"
bytemuck = "1.22.0"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = "0.12.12"
futures = "0.3.31"
log = "0.4.26"

[features]
openmp = []
linear_probing = []
exact_counting = []
# name = "build_db"
# path = "src/build_db.rs"

# [[bin]]
# name = "classify"
# path = "src/classify.rs"

# [[bin]]
# name = "dump_table"
# path = "src/dump_table.rs"

# [[bin]]
# name = "estimate_capacity"
# path = "src/estimate_capacity.rs"

# [[bin]]
# name = "lookup_accession_numbers"
# path = "src/lookup_accession_numbers.rs"

# [[bin]]
# name = "k2mask"
# path = "src/k2mask.rs"
